# Angry_Birds_Replica

./: .gitignore  2025OOPL_Final_template.md  2026OOPL_Final.md  2026OOPL_T48_report.docx  CMakeLists.txt  Instruction.md  Proposal.md  README.md  files.cmake  sync_progress.sh  期末報告參考格式.docx
PTSD/: CMakeLists.txt
PTSD/cmake/: Dependencies.cmake
PTSD/include/: config.hpp
Resources/: SCORING_GUIDE.md  high_scores.json  scoring_config.json  scoring_config_advanced.json  unlock_progress.json
Resources/entities/: entity_templates.json
Resources/levels/: intro_layout.json  level_1.json  level_10.json  level_1_test.json  level_2.json  level_2_test.json  level_3.json  level_4.json  level_5.json  level_6.json  level_7.json  level_8.json  level_9.json  level_earth_test.json
cmake/: reset_unlock_progress.cmake
include/: App.hpp  BGM.hpp  BackgroundImage.hpp  BackgroundManager.hpp  Button.hpp  Character.hpp  DynamicBackground.hpp  GameScene.hpp  IntroLayout.hpp  IntroScene.hpp  JsonParseUtils.hpp  LayoutParseUtils.hpp  LayoutTypes.hpp  LevelManager.hpp  LevelParser.hpp  LevelTypes.hpp  Resource.hpp  Scene.hpp  SceneInputController.hpp  SoundEffect.hpp  UILayout.hpp
include/Util/: AnimationUtils.hpp  DebugBox.hpp  LayoutUtils.hpp  MouseUtils.hpp  ViewportUtils.hpp
include/app/: App.hpp
include/audio/: SoundEffect.hpp
include/controllers/: BirdLaunchController.hpp
include/effects/: BirdTrail.hpp  FloatingScoreManager.hpp
include/entities/: Character.hpp  EntityTemplateDatabase.hpp  EntityTemplateTypes.hpp
include/graphics/: BackgroundImage.hpp  DynamicBackground.hpp
include/levels/: LevelManager.hpp  LevelObjectFactory.hpp  LevelTypes.hpp
include/parsers/: EntityTemplateParser.hpp  JsonParseUtils.hpp
include/scenes/: CollisionResponse.hpp  CollisionUtils.hpp  ContactManifold.hpp  DebugUtils.hpp  GameScene.hpp  IntroScene.hpp  LevelSelectScene.hpp  Scene.hpp  ScoringSystem.hpp  SleepSupport.hpp
include/system/: Resource.hpp
include/ui/: AnimatedButton.hpp  Button.hpp  GameHud.hpp  IntroLayout.hpp  LevelResultPanel.hpp  PauseMenu.hpp  UILayout.hpp
scratch/: settle.py
src/: AppStart.cpp  AppUpdate.cpp  BGM.cpp  BirdLaunchController.cpp  DynamicBackground.cpp  GameScene.cpp  IntroLayout.cpp  IntroScene.cpp  JsonParseUtils.cpp  LayoutParseUtils.cpp  LevelManager.cpp  LevelObjectFactory.cpp  LevelParser.cpp  Resource.cpp  Scene.cpp  SceneInputController.cpp  SoundEffect.cpp  UILayout.cpp  main.cpp
src/app/: AppStart.cpp  AppUpdate.cpp
src/audio/: BGM.cpp  SoundEffect.cpp
src/controllers/: BirdLaunchController.cpp  SceneInputController.cpp
src/effects/: BirdTrail.cpp  (+1 more)
src/ui/: Button.cpp  (+6 more)
(+38 files in other folders)
